# pyidoit

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linter.yaml  publish.yaml
pyidoit/: __init__.py  client.py  utils.py
scripts/: README.md  check  clean  lint  publish
