[metadata]
name = pyidoit
description = An Simple python i-doit Client.
author = Alex Mboutchouang
author_email = mboutchouangalex@gmail.com
license = MIT
version = attr: pyidoit.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Zaker237/pyidoit
classifiers =
    Development Status :: 4 - Beta,
    Intended Audience :: Developers,
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Programming Language :: Python :: 3.11,
    Topic :: Internet :: DMDB,

[options]
package_dir =
    = pyidoit

python_requires = >=3.7
install_requires =
    setuptools
    pydantic = >= 1.10.7

[project.urls]
Changelog = https://github.com/Zaker237/pyidoit/blob/master/CHANGELOG.md
Source = https://github.com/Zaker237/pyidoit

[flake8]
ignore = E305
exclude =
    .git,
    __pycache__,
    venv,
    .tox
max-line-length = 90